--- a/pluralSight/introductionToTestingInJava/pom.xml
+++ b/pluralSight/introductionToTestingInJava/pom.xml
@@ -15,8 +15,14 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
-    
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
