--- a/pluralSight/introductionToTestingInJava/pom.xml
+++ b/pluralSight/introductionToTestingInJava/pom.xml
@@ -21,6 +21,20 @@
             <artifactId>hamcrest</artifactId>
             <version>2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>au.com.bytecode</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.4</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
