--- a/youTube/cloudBeesTv/tutorials/HowToIntegrateSonarQubeWithJenkins/Jenkinsfile
+++ b/youTube/cloudBeesTv/tutorials/HowToIntegrateSonarQubeWithJenkins/Jenkinsfile
@@ -10,11 +10,18 @@ pipeline {
             mavenSettingsConfig: 'd0b2c611-85e5-458e-9e1e-f224c9e5ce0d',
             mavenLocalRepo: '/home/tetra/.m2/sonarqube_maven_repo'
           ){
-            withSonarQubeEnv(installationName: 'sonarQubeDockerServer') {
+            withSonarQubeEnv(installationName: 'sonarQubeServer') {
               sh 'mvn -X org.sonarsource.scanner.maven:sonar-maven-plugin:3.7.0.1746:sonar'
             } // SonarQube
           } // Maven
         } // dir
+      }
+    }
+    stage('Quality Gate'){
+      steps{
+        timeout(time: 5, unit: 'MINUTES'){
+          waitForQualityGate abortPipeline: true
+        }
       }
     }
   }
