--- a/others/tech/kafka/cli/basicProduceAndConsume/console-consumer-producer-basic/docker-compose.yml
+++ b/others/tech/kafka/cli/basicProduceAndConsume/console-consumer-producer-basic/docker-compose.yml
@@ -21,9 +21,9 @@ services:
     ports:
       - "29092:29092"
     environment:
-      - KAFKA_BROKDER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT='zookeeper:2181'
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://broker:9092, PLAINTEXT_HOST://localhost:29092
-      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-      - KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
