fix: --allow-multiple-documents for yaml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,17 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v6.0.0
+    rev: v4.4.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: mixed-line-ending
-      - id: double-quote-string-fixer
-      - id: fix-byte-order-marker
-      - id: check-json
-      - id: pretty-format-json
-      - id: check-toml
-      - id: check-xml
-      - id: check-yaml
-      - id: check-added-large-files
-      - id: detect-aws-credentials
-      - id: detect-private-key
-      - id: check-merge-conflict
+      - id: trailing-whitespace        # removes trailing whitespace
+      - id: end-of-file-fixer          # ensures files end with newline
+      - id: fix-byte-order-marker      # fixes byte order marker
+      - id: mixed-line-ending          # ensures consistent line endings
+      - id: check-yaml                 # validates YAML syntax
+        args: ['--allow-multiple-documents']
+      - id: check-json                 # validates JSON syntax
+      - id: check-xml                  # validates XML syntax
+      - id: pretty-format-json         # formats JSON files
+      - id: check-merge-conflict       # prevents merge conflict markers
+      - id: detect-aws-credentials     # detects AWS credentials
+      - id: detect-private-key         # detects private keys
+      - id: check-added-large-files    # prevents large files from being added
